--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ streamlit
 streamlit-folium
 
 # Vector DB - use latest version for better SQLite compatibility
-chromadb>=0.4.22
+chromadb
+pysqlite3-binary
+
 
 # Data handling
 pandas
